# mundi-demography

./: .coveragerc  .gitignore  LICENSE  README.rst  pyproject.toml  tasks.py
data/BR/: prepare.py
data/BR/processed/: age-distribution-C1.pkl  age-pyramid-C1.pkl  population-C1.pkl  yearly-population-C1.pkl
data/XX/: prepare.py
data/br/: prepare.py
data/world/: prepare.py
mundi_demography/: __init__.py  functions.py
mundi_demography/prepare/: __main__.py  loader.py
notebooks/: intro-demography.ipynb
tests/: conftests.py  test_db.py  test_functions.py
